--- a/samples/carsouel-animation.html
+++ b/samples/carsouel-animation.html
@@ -29,6 +29,6 @@
   </div>
   
 
-  <script src="../lib/carousel.js"></script>
+  <script src="../lib/carousel-animation.js"></script>
 </body>
 </html>
