--- a/samples/carsouel-simple.html
+++ b/samples/carsouel-simple.html
@@ -15,20 +15,15 @@
       <a href="#"><img src="http://cdn.jirengu.com/book.jirengu.com/img/3.jpg"></a>
       <a href="#"><img src="http://cdn.jirengu.com/book.jirengu.com/img/4.jpg"></a>
     </div>
-
-    <div class="action">
-      <span class="pre">上一个</span>
-      <span class="next">下一个</span>
-      <div class="dots">
-          <span class="active"></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+    <div class="dots">
+      <span class="active"></span>
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
   </div>
   
 
-  <script src="../lib/carousel.js"></script>
+  <script src="../lib/carousel-simple.js"></script>
 </body>
 </html>
